CHATS_SIT/force-app/main/default/objects/T_PMT_PLAN_NOTES__c.object
<CustomObject>
    <description>Payment Plan Notes</description>
    <fields>
        <fullName>IDN_PMT_PLAN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payment Plan</description>
        <label>Payment Plan</label>
        <referenceTo>T_PMT_PLAN__c</referenceTo>
        <relationshipLabel>Payment Plan Notes</relationshipLabel>
        <relationshipName>Payment_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TXT_CMT__c</fullName>
        <description>Body</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Body</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TXT_SUBJ__c</fullName>
        <description>Subject</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Subject</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Payment Plan Note</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payment Plan Note ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Plan Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>